support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/Support_Ticket_Intelligence__c.object-meta.xml
<CustomObject>
    <description>Customer support tickets whose priority is predicted by the Agentforce Support Ticket Priority flow.</description>
    <label>Support Ticket Intelligence</label>
    <pluralLabel>Support Ticket Intelligence</pluralLabel>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>