support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support agent handling the ticket.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Support Ticket Intelligence</relationshipLabel>
    <relationshipName>Support_Ticket_Intelligence_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>