support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free-text issue details. Keyword-analysed by the flow to predict priority.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>