support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <description>Predicted priority, set by the flow from description keywords.</description>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>