support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <description>Time taken to resolve the ticket, in hours.</description>
    <label>Resolution Time (hrs)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>