support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/SLA_Breach_Risk__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged by the flow when the ticket is older than the SLA threshold.</description>
    <label>SLA Breach Risk</label>
    <type>Checkbox</type>
</CustomField>