support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Auto-generated ticket reference shown to the customer.</description>
    <displayFormat>TKT-{0000}</displayFormat>
    <label>Ticket Number</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>