support-ticket-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/listViews/All_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Contact__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Status__c</columns>
    <columns>SLA_Breach_Risk__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tickets</label>
</ListView>